--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -11,7 +11,7 @@
 <div class="row justify-content-center">
 
     <div class="card col-sm-8">
-        <div class="card-body">more to come...</div>
+        <div class="card-body"><button class="btn btn-outline-dark btn-sm" (click)="onTest()">Backend Config</button> {{backendConfig}}</div>
     </div>
 
 </div>
