added component for tags, basic layout

--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -8,6 +8,8 @@
     </form>
 </nav>
 <app-settings *ngIf="settingsVisible"></app-settings>
+<app-tags header="selected tags"></app-tags>
+<app-tags header="available tags"></app-tags>
 <div class="row justify-content-center">
 
     <div class="card col-sm-8">
