--- a/frontend/src/app/tags/tags.component.html
+++ b/frontend/src/app/tags/tags.component.html
@@ -1,4 +1,7 @@
 <div class="card">
     <div class="card-header">{{header}}</div>
-    <div class="card-body"></div>
+    <div class="card-body">
+        <button *ngFor="let tag of tags"
+                class="btn btn-outline-secondary btn-sm taglist-entry" type="button">{{tag}}</button>
+    </div>
 </div>
