--- a/frontend/src/app/tags/tags.component.css
+++ b/frontend/src/app/tags/tags.component.css
@@ -1,3 +1,11 @@
 .card {
     margin-bottom: 1rem;
 }
+
+.taglist-entry {
+    margin-left: 0.5rem;
+}
+
+.taglist-entry:first-child {
+    margin-left: 0rem;
+}
