fixed layout and button styles

--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -5,11 +5,11 @@
     <div class="flex-fill d-flex">
         <input class="btn btn-outline-dark btn-sm" type="image"
                (click)="initialLoad()" src="assets/sync.svg">
-        <button class="btn btn-outline-dark btn-sm" type="button" data-toggle="button"
-                (click)="onSelectedTagsClicked()" [class.active]="selectedTagsVisible">selected
+        <button class="btn btn-outline-dark btn-sm active" type="button" data-toggle="button"
+                (click)="onSelectedTagsClicked()">selected
         </button>
-        <button class="btn btn-outline-dark btn-sm" type="button" data-toggle="button"
-                (click)="onAvailableTagsClicked()" [class.active]="selectedTagsVisible">available
+        <button class="btn btn-outline-dark btn-sm active" type="button" data-toggle="button"
+                (click)="onAvailableTagsClicked()">available
         </button>
         <input class="btn btn-outline-dark btn-sm ml-auto" type="image" data-toggle="button"
                (click)="onSettingsClicked()" src="assets/settings.svg">
