--- a/frontend/src/app/tags/tags.component.css
+++ b/frontend/src/app/tags/tags.component.css
@@ -4,5 +4,9 @@
 
 .taglist-entry {
     margin-right: 0.5rem;
-    margin-bottom: 0.5rem;
+    margin-bottom: 0.5em;
+}
+
+.card-body {
+    padding-bottom: 0.75rem;
 }
