move tags between the two lists

--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -6,18 +6,23 @@
         <input class="btn btn-outline-dark btn-sm" type="image"
                (click)="initialLoad()" src="assets/sync.svg">
         <button class="btn btn-outline-dark btn-sm active" type="button" data-toggle="button"
-                (click)="onSelectedTagsClicked()">selected
+                (click)="onSelectedTagsVisibleClicked()">selected
         </button>
         <button class="btn btn-outline-dark btn-sm active" type="button" data-toggle="button"
-                (click)="onAvailableTagsClicked()">available
+                (click)="onAvailableTagsVisibleClicked()">available
         </button>
         <input class="btn btn-outline-dark btn-sm ml-auto" type="image" data-toggle="button"
-               (click)="onSettingsClicked()" src="assets/settings.svg">
+               (click)="onSettingsVisibleClicked()" src="assets/settings.svg">
     </div>
 </nav>
 <app-settings *ngIf="settingsVisible"></app-settings>
-<app-tags *ngIf="selectedTagsVisible" header="selected tags" [tags]="selectedTags"></app-tags>
-<app-tags *ngIf="availableTagsVisible" header="available tags" [tags]="availableTags"></app-tags>
+<app-tags *ngIf="selectedTagsVisible"
+          header="selected tags" [tags]="selectedTags"
+          (selected)="onSelectedTagsClicked($event)"></app-tags>
+<app-tags *ngIf="availableTagsVisible"
+          header="available tags"
+          [tags]="availableTags"
+          (selected)="onAvailableTagsClicked($event)"></app-tags>
 <div class="row justify-content-center">
 
     <div class="card col-sm-8">
