--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -3,15 +3,17 @@
         <img src="assets/sothawofant-32.png" width="32" height="32" alt="">
     </div>
     <div class="flex-fill d-flex">
-        <input class="btn btn-outline-dark btn-sm" type="image"
+        <input id="init" class="btn btn-outline-dark btn-sm" type="image"
                (click)="initialLoad()" src="assets/sync.svg">
-        <button class="btn btn-outline-dark btn-sm active" type="button" data-toggle="button"
+        <button id="selected" class="btn btn-outline-dark btn-sm active" type="button" data-toggle="button"
                 (click)="onSelectedTagsVisibleClicked()">selected
         </button>
-        <button class="btn btn-outline-dark btn-sm active" type="button" data-toggle="button"
+        <button id="available" class="btn btn-outline-dark btn-sm active" type="button" data-toggle="button"
                 (click)="onAvailableTagsVisibleClicked()">available
         </button>
-        <input class="btn btn-outline-dark btn-sm ml-auto" type="image" data-toggle="button"
+        <input id="log" class="btn btn-outline-dark btn-sm ml-auto" type="image" data-toggle="button"
+                (click)="onLogVisibleClicked()" src="assets/report.svg">
+        <input id="settings" class="btn btn-outline-dark btn-sm" type="image" data-toggle="button"
                (click)="onSettingsVisibleClicked()" src="assets/settings.svg">
     </div>
 </nav>
@@ -33,3 +35,4 @@
     </div>
 
 </div>
+<app-log *ngIf="logVisible"></app-log>
