--- a/frontend/src/app/settings/settings.component.html
+++ b/frontend/src/app/settings/settings.component.html
@@ -1,15 +1,22 @@
-<div class="row" id="settings">
-    <div class="border-bottom col-sm-12">
+<div class="row" >
+    <div class="border-bottom col-sm-12" id="settings">
         <form>
             <div class="form-group">
                 <label for="ApiUrl">API URL</label>
                 <input class="form-control" id="ApiUrl" placeholder="API URL"
-                name="apiUrl" [(ngModel)]="apiUrl">
+                       name="apiUrl" [(ngModel)]="apiUrl">
             </div>
             <div class="form-group">
                 <label for="ApiKey">API Key</label>
                 <input class="form-control" id="ApiKey" placeholder="API Key"
-                name="apiKey" [(ngModel)]="apiKey">
+                       name="apiKey" [(ngModel)]="apiKey">
+            </div>
+            <div>Log level</div>
+            <div *ngFor="let level of logLevels" class="form-check form-check-inline">
+                <input class="form-check-input" type="radio" name="loglevel" id="{{level}}" value="{{level}}"
+                       [checked]="level === logLevel"
+                (click)="logLevelSelected(level)">
+                <label class="form-check-label" for="{{level}}">{{level | lowercase}}</label>
             </div>
         </form>
     </div>
