--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -4,17 +4,25 @@
     </div>
     <div class="flex-fill d-flex">
         <input id="init" class="btn btn-outline-dark btn-sm" type="image"
-               (click)="initialLoad()" src="assets/sync.svg">
-        <button id="selected" class="btn btn-outline-dark btn-sm active" type="button" data-toggle="button"
-                (click)="onSelectedTagsVisibleClicked()">selected
+               (click)="initialLoad()" src="assets/sync.svg" alt="init">
+
+        <button type="button" id="selected" class="btn btn-outline-dark btn-sm active"
+                [class.active]="selectedTagsVisible"
+                (click)="onSelectedTagsVisibleClicked()"
+        >selected
         </button>
-        <button id="available" class="btn btn-outline-dark btn-sm active" type="button" data-toggle="button"
-                (click)="onAvailableTagsVisibleClicked()">available
+
+        <button  type="button" id="available" class="btn btn-outline-dark btn-sm active"
+                [class.active]="availableTagsVisible"
+                (click)="onAvailableTagsVisibleClicked()"
+        >available
         </button>
+
         <input id="log" class="btn btn-outline-dark btn-sm ml-auto" type="image" data-toggle="button"
-               (click)="onLogVisibleClicked()" src="assets/report.svg">
+               (click)="onLogVisibleClicked()" src="assets/report.svg" alt="log">
+
         <input id="settings" class="btn btn-outline-dark btn-sm" type="image" data-toggle="button"
-               (click)="onSettingsVisibleClicked()" src="assets/settings.svg">
+               (click)="onSettingsVisibleClicked()" src="assets/settings.svg" alt="settings">
     </div>
 </nav>
 
