--- a/frontend/src/app/app.component.css
+++ b/frontend/src/app/app.component.css
@@ -1,9 +1,14 @@
+#init:hover {
+    cursor: pointer;
+}
 nav button {
     margin: 0 0.25rem;
+    text-overflow: ellipsis;
 }
-nav input {
+nav input, #init {
     margin: 0 0.25rem;
 }
+
 #test {
     margin-top: 1rem;
 }
