--- a/frontend/src/app/editor/editor.component.html
+++ b/frontend/src/app/editor/editor.component.html
@@ -3,7 +3,7 @@
     <form>
       <div class="form-group">
         <label for="url">URL</label>
-        <input class="form-control" id="url" placeholder="URL"
+        <input class="form-control" id="url" placeholder="URL of the bookmark"
                name="url" [(ngModel)]="url">
       </div>
       <div class="form-group">
@@ -13,7 +13,7 @@
       </div>
       <div class="form-group">
         <label for="tags">Tags</label>
-        <input class="form-control" id="tags" placeholder="Tags"
+        <input class="form-control" id="tags" placeholder="Tags, separated by whitespace or comma/semicolon"
                name="tags" [(ngModel)]="tags">
       </div>
       <div id="buttons">
