validation of input when adding a bookmark

--- a/frontend/src/app/editor/editor.component.html
+++ b/frontend/src/app/editor/editor.component.html
@@ -17,8 +17,8 @@
                name="tags" [(ngModel)]="tags">
       </div>
       <div id="buttons">
-        <button class="btn btn-secondary" (click)="onOk()">Ok</button>
-        <button class="btn btn-outline-secondary" (click)="onCancel()">Cancel</button>
+        <button class="btn btn-secondary" (click)="onOk()">ok</button>
+        <button class="btn btn-outline-secondary" (click)="onCancel()">cancel</button>
       </div>
     </form>
   </div>
