--- a/frontend/src/taglist/TagList.module.css
+++ b/frontend/src/taglist/TagList.module.css
@@ -2,11 +2,11 @@
     margin-bottom: 1rem;
 }
 
-.taglist-entry {
+.taglistEntry {
     margin-right: 0.5rem;
     margin-bottom: 0.5em;
 }
 
-.card-body {
+.cardBody {
     padding-bottom: 0.75rem;
 }
