--- a/frontend/src/header/Header.module.css
+++ b/frontend/src/header/Header.module.css
@@ -1,4 +1,4 @@
-#init-app:hover {
+.initApp:hover {
     cursor: pointer;
 }
 
@@ -7,6 +7,3 @@ nav button {
     text-overflow: ellipsis;
 }
 
-nav input, #init-app {
-    margin: 0 0.25rem;
-}
